--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,8 +15,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background-color: black;
-  color: white;
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   font-family: Montserrat;
 }
 
@@ -48,11 +48,27 @@ a:hover .rotate-image {
 }
 
 
-.background {
-  background-image: url('/main-page.png'); /* Путь к вашему изображению */
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+.theme{
+  transition: 1s all ease;
+}
+
+.light {
+  background-color: white;
+  color: #111;
+}
+
+.dark {
+  background-color: #111;
+  color: #ffffff;
+}
+
+.main_container {
+    min-height: 100vh;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
 }
 
 
